--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
+  margin: 30px auto;
   max-width: 600px;
+}
+
+.App footer {
+  text-align: center;
+  font-size: 10px;
+  margin: 10px 0;
 }
