--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,7 +2,6 @@
   border: 1px solid #6600cc;
   font-family: Arial, Helvetica, sans-serif;
   padding: 16px;
-  margin: 30px auto;
   max-width: 600px;
   border-radius: 4px;
   color: #878787;
@@ -25,4 +24,27 @@
   font-weight: 100;
   line-height: 19px;
   list-style: none;
+}
+
+.Weather .temperature {
+  font-weight: bold;
+  color: #212121;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 64px;
+}
+
+.Weather img {
+  height: 64px;
+  width: 64px;
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.Weather .unit {
+  font-size: 16px;
+  color: #212121;
+  font-weight: 400;
+  position: relative;
+  top: -32px;
 }
