--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,5 +1,5 @@
 .Weather {
-  border: 1px solid #6600cc;
+  border: 1px solid #301466;
   font-family: Arial, Helvetica, sans-serif;
   padding: 16px;
   max-width: 600px;
@@ -47,4 +47,11 @@
   font-weight: 400;
   position: relative;
   top: -32px;
+}
+
+.Weather .btn {
+  background: #301466;
+  border: none;
+  font-weight: bold;
+  color: #fff;
 }
