--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  height: 100%;
+  width: 100%;
+  background: #daccf5;
+}
+
 .App {
   margin: 30px auto;
   max-width: 600px;
@@ -7,4 +20,8 @@
   text-align: center;
   font-size: 10px;
   margin: 10px 0;
+}
+
+.App .weather-holder {
+  background-color: #daccf5;
 }
